update init config

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>img-vuer</title>
+  <title>vue-gallery-viewer</title>
   <style>
     html,
     body {
